Spacing issue

--- a/site/static/styles.css
+++ b/site/static/styles.css
@@ -7,7 +7,7 @@ h5 {
 }
 
 .percent__int {
-    letter-spacing: 2px;
+    letter-spacing: 5px;
 }
 
 .btn-outline-success {
